--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,17 @@ nav a:hover{
     font-size: 2.5vh;
 }
 
+.Seccion_Generica{
+    width: 100vw;
+
+    background: transparent;
+}
+
+.Contenedor_Generico{
+    height: 80%;
+    background: transparent;
+}
+
 /*----------------------------------------------------------------------------------------------------*/
 /* PRESENTACION */
 .presentacion_seccion{
@@ -156,15 +167,6 @@ nav a:hover{
 .presentacion_elemento p{
     font-family: Helvetica-Light;
     font-size: 5vw;
-}
-.presentacion_seccion img{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    pointer-events: none;
 }
 
 /*----------------------------------------------------------------------------------------------------*/
@@ -221,7 +223,52 @@ nav a:hover{
     width: 25vw;
 }
 
+/*----------------------------------------------------------------------------------------------------*/
+/* CONJUNTO DE HABILIDADES */
+.conjuntoDeHabilidades_seccion{
+    /* TAMAÑO */
+    width: 100vw;
+    height: 100vh;
 
+    /* CONTENIDO */
+    display: flex;
+    align-items: center;      /* ALINEACION VERTICAL*/
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+
+    /* ASPECTO */
+    background: #fff;
+    background: transparent;
+}
+.conjuntoDeHabilidades_contenedor{    
+    /* TAMAÑO */
+    width: 80%;
+    height: 80%;
+    padding: 20px 20px 20px 20px;
+
+    /* CONTENIDO */    
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;      /* ALINEACION VERTICAL*/
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+
+    /* ASPECTO */ 
+    overflow: hidden;
+    background: transparent;
+}
+.conjuntoDeHabilidades_elemento{
+    width: 25%;
+    height: 25%;
+
+    padding: 0 2% 0 2%;
+    
+    background: transparent;
+}
+.conjuntoDeHabilidades_elemento img{
+    width: 100%;
+    height: 100%;
+
+    padding: 10px 10px 10px 10px;
+}
 
 
 /*----------------------------------------------------------------------------------------------------*/
@@ -238,11 +285,15 @@ nav a:hover{
 
     /* ASPECTO */
     background: #3836f2;
+    /**/
+    background: transparent;
 }
 .Portafolio_contenedor{    
     /* TAMAÑO */
-    width: 70%;
+    width: 75%;
     padding: 20px 20px 20px 20px;
+    
+
 
     /* CONTENIDO */    
     display: flex;
@@ -250,19 +301,23 @@ nav a:hover{
     align-items: center;      /* ALINEACION VERTICAL*/
     justify-content: center;  /* ALINEACION HORIZONTAL*/
 
-    /* ASPECTO */ 
+    /* ASPECTO  */ 
     background: #64a273;
+    /**/
+    background: transparent;
     overflow: hidden;
 }
 .Portafolio_elemento{
-    width: 80%;
+    width: 100%;
 
     background: #759;
-    padding: 0 2% 0 2%;
+    /**/
+    background: transparent;
+    padding: 5% 2% 5% 2%;
     
-    border-width: 1px;
+    border-width: 5px;
     border-style: solid;
-    border-color: black;
+    border-color: #fff;
 
     display: flex;
     align-items: center;
@@ -272,6 +327,7 @@ nav a:hover{
     width: 500px;
 }
 .Portafolio_texto{
+    padding: 2% 2% 2% 2%;
     color: #fff;
     text-align: justify;
     background: #000;
@@ -295,144 +351,13 @@ nav a:hover{
 /*
 /*----------------------------------------------------------------------------------------------------*/
 /* PORTAFOLIO 
-.portafolio_seccion{
-    background: #64a273;
-    align-items: center;
-    text-align: left;
-    font-family: 'Anton', sans-serif;
-    font-size: 50px;
-    color: white;
 
-    min-height: 100vh;
-}
-.portafolio_contenedor{
-    background: rgb(175, 16, 93);
-
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-
-    min-height: 100vh;
-
-    overflow: hidden;
-}
-.portafolio_elemento{
-    background: sienna;
-    
-}
-.portafolio_elemento h1{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 5vw;
-    color: #fff;
-}
-.portafolio_elemento p{
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1vw;
-    max-width: 45vw;
-    text-align: justify;
-    color: #fff;
-}
-
-.Portafolio_Galeria{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.Portafolio_Imagen{
-    width: 24%;
-    margin-bottom: 10px;
-    overflow: hidden;
-    position: relative;
-    cursor: pointer;
-    box-shadow: 0 0 6px 0 rgba(0, 0, 0, .5);
-}
-
-.Portafolio_Imagen > img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: block;
-}
-
-.Portafolio_Hover{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    transform: scale(0);
-    background: hsla(273,91%,27%, 0.7);
-    transition: transform .5s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.Portafolio_Hover img{
-    width: 50px;
-}
-
-.Portafolio_Imagen:hover .Portafolio_Hover{
-    transform: scale(1);
-}
 */
 
 
 
 
 
-
-
-
-/*----------------------------------------------------------------------------------------------------*/
-/* CONJUNTO DE HABILIDADES */
-.conjuntoDeHabilidades_seccion{
-    /* TAMAÑO */
-    width: 100vw;
-    height: 100vh;
-
-    /* CONTENIDO */
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-
-    /* ASPECTO */
-    background: #fff;
-}
-.conjuntoDeHabilidades_contenedor{    
-    /* TAMAÑO */
-    width: 60%;
-    height: 80%;
-    padding: 20px 20px 20px 20px;
-
-    /* CONTENIDO */    
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-
-    /* ASPECTO */ 
-    background: #64a273;
-    overflow: hidden;
-}
-.conjuntoDeHabilidades_elemento{
-    width: 25%;
-    height: 25%;
-
-    background: #759;
-    padding: 0 2% 0 2%;
-    
-    border-width: 1px;
-    border-style: solid;
-    border-color: black;
-}
-.conjuntoDeHabilidades_elemento img{
-    width: 100%;
-    height: 100%;
-
-    padding: 10px 10px 10px 10px;
-}
 
 
 
@@ -717,6 +642,22 @@ nav a:hover{
     transform: scale(1);
     
 }
+
+.Ilustracion_Seccion{
+    width: 100vw;
+    height: 100vh;
+    background:#000;
+}
+
+.Ilustracion_Imagen{
+    width: 100vw;
+    height: 100vh;
+    
+    object-fit: fill;
+    object-position: center center;
+
+}
+
 
 
 /*----------------------------------------------------------------------------------------------------*/
