--- a/styles.css
+++ b/styles.css
@@ -26,22 +26,10 @@
     box-sizing: border-box;
 }
 
-
-
-
 body{
     background: #000;
     margin: 0;
-
-    /* cursor: url(images/Cursor_Nave.svg), auto; */
 }
-/*
-a{
-    cursor: url(images/Cursor_Astronaut.svg), auto;
-}*/
-
-
-
 
 /*----------------------------------------------------------------------------------------------------*/
 /*SMOOTH SCROLL*/
@@ -57,6 +45,58 @@ html{
     position: fixed;
     z-index: -1;
 }
+
+/*----------------------------------------------------------------------------------------------------*/
+/* BARRA SOCIAL */
+.barra_social{
+    position: fixed;
+    right: 0;
+    top: 40%;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    z-index: 100;
+}
+.icon{
+    color: #fff;
+    text-decoration: none;
+    padding: .7rem;
+    display: flex;
+    transition: all .2s;
+    background: #2A3F4B;
+}/*
+.icon-github{
+    background: #2A3F4B;
+}
+.icon-linkedin2{
+    background: #0a66c2;
+}
+.icon-facebook{
+    background: #2E406E;
+}
+.icon-twitter{
+    background: #339DC5;
+}
+.icon-youtube{
+    background: #E83028;
+}
+.icon-instagram{
+    background: #3f60a5;
+}*/
+.icon:first-child{
+    border-radius: 1rem 0 0 0;
+}
+.icon:last-child{
+    border-radius: 0 0 0 1rem;
+}
+.icon:hover{
+    padding-right: 3rem;
+    border-radius: 1rem 0 0 1rem;
+    box-shadow: 0 0 .5 rgba(0, 0, 0, 0.42);
+}
+
+
 
 /*----------------------------------------------------------------------------------------------------*/
 /* MENU DE NAVEGACION - HEADER*/
@@ -103,8 +143,15 @@ nav a:hover{
     font-size: 2.5vh;
 }
 
+
+
+
+/*----------------------------------------------------------------------------------------------------*/
+/* APLICA PARA TODO EL DOCUMENTO */
 .Seccion_Generica{
-    width: 100vw;
+    min-width: 100vw;
+    max-width: 100vw;
+    min-height: 100vh;
 
     background: transparent;
 }
@@ -113,6 +160,20 @@ nav a:hover{
     height: 80%;
     background: transparent;
 }
+
+.Ilustracion_Seccion{
+    width: 100vw;
+    height: 100vh;
+    background:#000;
+}
+
+.Ilustracion_Imagen{
+    width: 100vw;
+    height: 100vh;
+}
+
+
+
 
 /*----------------------------------------------------------------------------------------------------*/
 /* PRESENTACION */
@@ -153,7 +214,6 @@ nav a:hover{
 }
 .presentacion_elemento{
     width: 80%;
-
     background: transparent;
 }
 .presentacion_elemento h1{
@@ -168,6 +228,9 @@ nav a:hover{
     font-family: Helvetica-Light;
     font-size: 5vw;
 }
+
+
+
 
 /*----------------------------------------------------------------------------------------------------*/
 /* SOBRE MI */
@@ -223,6 +286,9 @@ nav a:hover{
     width: 25vw;
 }
 
+
+
+
 /*----------------------------------------------------------------------------------------------------*/
 /* CONJUNTO DE HABILIDADES */
 .conjuntoDeHabilidades_seccion{
@@ -272,7 +338,7 @@ nav a:hover{
 
 
 /*----------------------------------------------------------------------------------------------------*/
-/* CONJUNTO DE HABILIDADES */
+/* PORTAFOLIO */
 .Portafolio_seccion{
     /* TAMAÑO */
     width: 100vw;
@@ -291,10 +357,8 @@ nav a:hover{
 .Portafolio_contenedor{    
     /* TAMAÑO */
     width: 75%;
-    padding: 20px 20px 20px 20px;
+    padding: 5% 20px 20px 20px;
     
-
-
     /* CONTENIDO */    
     display: flex;
     flex-wrap: wrap;
@@ -313,7 +377,7 @@ nav a:hover{
     background: #759;
     /**/
     background: transparent;
-    padding: 5% 2% 5% 2%;
+    padding: 4% 2% 4% 2%;
     
     border-width: 5px;
     border-style: solid;
@@ -325,6 +389,9 @@ nav a:hover{
 }
 .Portafolio_elemento_img{
     width: 500px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #fff;
 }
 .Portafolio_texto{
     padding: 2% 2% 2% 2%;
@@ -348,27 +415,15 @@ nav a:hover{
     max-width: 45vw;
     margin: 0 0 0 0;
 }
-/*
-/*----------------------------------------------------------------------------------------------------*/
-/* PORTAFOLIO 
-
-*/
-
-
-
-
-
-
-
 
 
 
 
 /*----------------------------------------------------------------------------------------------------*/
-/* EXPERIENCIA */
-.Experiencia_seccion{
+/* EXPERIENCIA - EDUCACION*/
+.Experiencia_Educacion_Seccion{
     /* TAMAÑO */
-    width: 100vw;
+    min-width: 100vw;
     min-height: 100vh;
 
     /* CONTENIDO */
@@ -379,10 +434,9 @@ nav a:hover{
     /* ASPECTO */
     background: transparent;
 }
-.Experiencia_contenedor{
+.Experiencia_Educacion_Contenedor{
     /* TAMAÑO */
-    width: 80%;
-    height: 80%;
+    width: 75%;
     padding: 80px 20px 20px 20px;
 
     /* CONTENIDO */    
@@ -390,81 +444,9 @@ nav a:hover{
     align-items: center;      /* ALINEACION VERTICAL*/
     justify-content: center;  /* ALINEACION HORIZONTAL*/
 
-    color: #fff;
-
-    /* ASPECTO */ 
-    background: transparent;
-    overflow: hidden;
-}
-.Experiencia_elemento{
-    width: 100%;
-
-    background: #fff;
-    margin: 0;
-    padding: 4% 4% 4% 4%;
-
-    border-radius: 20px;
-
-}
-.Experiencia_elemento h1{
-    font-family: Nasa-Type;
-    font-size: 4vw;
-    background: #339DC5;
-    margin: 0;
-}
-.Experiencia_elemento h2{
-    font-family: Helvetica-Medium;
-    font-size: 3vw;
-    background: #64a273;
-    margin: 0;
-}
-.Experiencia_elemento h3{
-    font-family: Helvetica-Light;
-    font-size: 2vw;
-    background: #339DC5;
-    margin: 0;
-}
-.Experiencia_elemento h4{
-    font-family: Futura-Light;
-    font-size: 2vw;
-
-    background: #64a273;
-    margin: 0;
-}
-.Experiencia_elemento p{
-    font-family: Futura-Light;
-    font-size: 20px;
-    background: #339DC5;
-    margin: 0;
-}
-
-
-
-/*----------------------------------------------------------------------------------------------------*/
-/* EDUCACION */
-.Educacion_seccion{
-    /* TAMAÑO */
-    width: 100vw;
-    min-height: 100vh;
-
-    /* CONTENIDO */
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-
-    /* ASPECTO */
-    background: #64a273;
-}
-.Educacion_contenedor{
-    /* TAMAÑO */
-    width: 80%;
-    height: 80%;
-    padding: 80px 20px 20px 20px;
-
-    /* CONTENIDO */    
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
+    border-width: 5px;
+    border-style: solid;
+    border-color: #fff;
 
     color: #fff;
 
@@ -472,55 +454,48 @@ nav a:hover{
     background: transparent;
     overflow: hidden;
 }
-.Educacion_elemento{
+.Experiencia_Educacion_Elemento{
     width: 100%;
 
     background: #fff;
+    background: transparent;
     margin: 0;
     padding: 4% 4% 4% 4%;
 
     border-radius: 20px;
 
 }
-.Educacion_elemento h1{
-    font-family: Nasa-Type;
+.Experiencia_Educacion_Elemento h1{
+    font-family: Helvetica-Medium;
     font-size: 4vw;
-    background: #339DC5;
+    /* background: #339DC5;*/
     margin: 0;
 }
-.Educacion_elemento h2{
+.Experiencia_Educacion_Elemento h2{
     font-family: Helvetica-Medium;
     font-size: 3vw;
-    background: #64a273;
+    /*background: #64a273;*/
     margin: 0;
 }
-.Educacion_elemento h3{
+.Experiencia_Educacion_Elemento h3{
     font-family: Helvetica-Light;
     font-size: 2vw;
-    background: #339DC5;
+    /*background: #339DC5;*/
     margin: 0;
 }
-.Educacion_elemento h4{
+.Experiencia_Educacion_Elemento h4{
     font-family: Futura-Light;
     font-size: 2vw;
 
-    background: #64a273;
+    /*background: #64a273;*/
     margin: 0;
 }
-.Educacion_elemento p{
+.Experiencia_Educacion_Elemento p{
     font-family: Futura-Light;
     font-size: 20px;
-    background: #339DC5;
+    /*background: #339DC5;*/
     margin: 0;
 }
-
-
-
-
-
-
-
-
 
 /*----------------------------------------------------------------------------------------------------*/
 /* CONTACTO */
@@ -643,20 +618,14 @@ nav a:hover{
     
 }
 
-.Ilustracion_Seccion{
-    width: 100vw;
-    height: 100vh;
-    background:#000;
-}
 
-.Ilustracion_Imagen{
-    width: 100vw;
-    height: 100vh;
-    
-    object-fit: fill;
-    object-position: center center;
 
-}
+
+
+
+
+
+
 
 
 
@@ -684,64 +653,10 @@ nav a:hover{
 
 
 
-/*----------------------------------------------------------------------------------------------------*/
-/* BARRA SOCIAL */
-.barra_social{
-    position: fixed;
-    right: 0;
-    top: 40%;
-    font-size: 1.5rem;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    z-index: 100;
-}
-.icon{
-    color: #fff;
-    text-decoration: none;
-    padding: .7rem;
-    display: flex;
-    transition: all .2s;
-    background: #2A3F4B;
-}/*
-.icon-github{
-    background: #2A3F4B;
-}
-.icon-linkedin2{
-    background: #0a66c2;
-}
-.icon-facebook{
-    background: #2E406E;
-}
-.icon-twitter{
-    background: #339DC5;
-}
-.icon-youtube{
-    background: #E83028;
-}
-.icon-instagram{
-    background: #3f60a5;
-}*/
-.icon:first-child{
-    border-radius: 1rem 0 0 0;
-}
-.icon:last-child{
-    border-radius: 0 0 0 1rem;
-}
-.icon:hover{
-    padding-right: 3rem;
-    border-radius: 1rem 0 0 1rem;
-    box-shadow: 0 0 .5 rgba(0, 0, 0, 0.42);
-}
+
 
 /*----------------------------------------------------------------------------------------------------*/
-/* CODIGO NECESARIO PARA EL EFECTO DE MAQUINA DE ESCRIBIR
-.contenedor
-h1
-h1 span
-typing_effect
-blink_effect
-*/
+/* CODIGO NECESARIO PARA EL EFECTO DE MAQUINA DE ESCRIBIR */
 .efecto_escribir{
     background: transparent;
     display: table;
