--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,12 @@
     src: url(fonts/Helvetica-Light.ttf);
 }
 
-*{
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body{
     background: #000;
+    max-width: 100vw;
     margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 /*----------------------------------------------------------------------------------------------------*/
@@ -40,8 +38,8 @@ html{
 /*----------------------------------------------------------------------------------------------------*/
 /* CONTENEDOR DE LAS PARTICULAS */
 .particulas_JS{
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     position: fixed;
     z-index: -1;
 }
@@ -102,7 +100,7 @@ html{
 /* MENU DE NAVEGACION - HEADER*/
 .header{
     /* TAMAÑO */
-    width: 100vw;
+    width: 100%;
     height: 6vh;
     padding: 0;
 
@@ -151,9 +149,9 @@ nav a:hover{
 /* APLICA PARA TODO EL DOCUMENTO */
 .Seccion_Generica{
     /* TAMAÑO */
-    min-width: 100vw;
-    max-width: 100vw;
-    min-height: 100vh;
+    width: 100vw;
+    height: 94vh;
+    padding: 6vh 0 0 0;
 
     /* CONTENIDO */
     display: flex;
@@ -164,20 +162,13 @@ nav a:hover{
     background: transparent;
     overflow: hidden;
 }
-
 .Contenedor_Generico{
     height: 80%;
     background: transparent;
 }
 
-.Ilustracion_Seccion{
-    width: 100vw;
-    height: 100vh;
-    background:#000;
-}
-
 .Ilustracion_Imagen{
-    width: 100vw;
+    width: 90vw;
     height: 100vh;
 }
 
@@ -186,26 +177,10 @@ nav a:hover{
 
 /*----------------------------------------------------------------------------------------------------*/
 /* PRESENTACION */
-.presentacion_seccion{
-    /* TAMAÑO */
-    width: 100vw;
-    height: 100vh;
-
-    position: relative;
-
-    /* CONTENIDO */
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-
-    /* ASPECTO */
-    background: #000;
-    overflow: hidden;
-}
 .presentacion_contenedor{
     /* TAMAÑO */
     width: 100%;
-    height: 80%;
+    height: 100%;
     padding: 20px 20px 20px 20px;
 
     position: relative;
@@ -219,7 +194,7 @@ nav a:hover{
     color: #fff;
 
     /* ASPECTO */ 
-    background: transparent;
+    background: #000;
     overflow: hidden;
 }
 .presentacion_elemento{
@@ -244,57 +219,48 @@ nav a:hover{
 
 /*----------------------------------------------------------------------------------------------------*/
 /* SOBRE MI */
-.sobreMi_seccion{
-    /* TAMAÑO */
-    width: 100vw;
-    height: 100vh;
-
-    /* CONTENIDO */
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-
-    /* ASPECTO */
-    background: transparent;
-    overflow: hidden;
-}
 .sobreMi_contenedor{    
     /* TAMAÑO */
-    width: 80%;
-    height: 80%;
-    padding: 20px 20px 20px 20px;
+    width: 100%;
+    height: 100%;
+    padding: 5% 5% 5% 5%;
 
     /* CONTENIDO */    
     display: flex;
     align-items: center;      /* ALINEACION VERTICAL*/
     justify-content: center;  /* ALINEACION HORIZONTAL*/
 
-    color: #fff;
-
     /* ASPECTO */ 
     background: transparent;
-    overflow: hidden;
+    overflow-x: hidden;
+    
+    color: #fff; 
 }
 .sobreMi_elemento{
     background: transparent;
-    padding: 0 2% 0 2%;
-
-    color: #fff;    
+    padding: 0 3% 0 3%;
+}
+.sobreMi_elemento:first-child{
+    display: flex;
+    width: 25%;
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+}
+.sobreMi_elemento:nth-child(2){
+    width: 55%;
 }
 .sobreMi_elemento h1{
     font-family: Futura-Demi_Bold;
-    font-size: 8vw;
+    font-size: 6vw;
     margin: 0 0 0 0;
 }
 .sobreMi_elemento p{
     font-family: Futura-Light;
     font-size: 1.5vw;
-    max-width: 45vw;
     text-align: justify;
     margin: 0 0 0 0;
 }
 .sobreMi_elemento img{
-    width: 25vw;
+    width: 100%;
 }
 
 
@@ -302,25 +268,11 @@ nav a:hover{
 
 /*----------------------------------------------------------------------------------------------------*/
 /* CONJUNTO DE HABILIDADES */
-.conjuntoDeHabilidades_seccion{
-    /* TAMAÑO */
-    width: 100vw;
-    min-height: 100vh;
-
-    /* CONTENIDO */
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-
-    /* ASPECTO */
-    background: transparent;
-    overflow: hidden;
-}
 .ConjuntoDeHabilidades_Contenedor{    
     /* TAMAÑO */
-    width: 75%;
-    min-height: 80%;
-    padding: 5% 20px 20px 20px;
+    width:100%;
+    height: 100%;
+    padding: 0;
 
     /* CONTENIDO */    
     display: flex;
@@ -344,13 +296,10 @@ nav a:hover{
     justify-content: center;  /* ALINEACION HORIZONTAL*/
 
     /* ASPECTO */ 
-    overflow: hidden;
     background: transparent;
 }
 .conjuntoDeHabilidades_elemento{
     width: 25%;
-
-    padding: 1% 2% 1% 2%;
 
     display: flex;
     align-items: center;      /* ALINEACION VERTICAL*/
@@ -359,22 +308,26 @@ nav a:hover{
     background: transparent;
 }
 .conjuntoDeHabilidades_elemento img{
-    width: 80%;
+    width: 100%;
     max-width: 140px;
-
-    padding: 10px 10px 10px 10px;
+    padding: 5% 5% 5% 5%;
 }
-.conjuntoDeHabilidades_seccion span{
+.ConjuntoDeHabilidades_Contenedor span{
     color: #fff;
     font-family: Helvetica-Medium;
     font-size: 3vw;
 }
 
+
+
+
+
+
 /*----------------------------------------------------------------------------------------------------*/
 /* PORTAFOLIO */
 .Portafolio_seccion{
     /* TAMAÑO */
-    width: 100vw;
+    width: 90vw;
     min-height: 100vh;
 
     /* CONTENIDO */
@@ -406,7 +359,7 @@ nav a:hover{
     overflow: hidden;
 }
 .Portafolio_elemento{
-    width: 100%;
+    width: 90%;
 
     background: #759;
     /**/
@@ -457,95 +410,68 @@ nav a:hover{
 /* EXPERIENCIA - EDUCACION*/
 .Experiencia_Educacion_Seccion{
     /* TAMAÑO */
-    min-width: 100vw;
-    min-height: 100vh;
+    width: 100vw;
+    padding: 6vh 0 0 0;
 
     /* CONTENIDO */
     display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
     justify-content: center;  /* ALINEACION HORIZONTAL*/
 
     /* ASPECTO */
-    background: transparent;
-    overflow: hidden;
 }
 .Experiencia_Educacion_Contenedor{
     /* TAMAÑO */
-    width: 75%;
-    padding: 80px 20px 20px 20px;
+    width: 90%;
+    min-height: 100vh;
+    padding: 1% 1% 1% 1%;
 
     /* CONTENIDO */    
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
 
     border-width: 5px;
     border-style: solid;
     border-color: #fff;
 
-    color: #fff;
-
     /* ASPECTO */ 
-    background: transparent;
-    overflow: hidden;
+    
+    color: #000;
+    background: #fff;
 }
 .Experiencia_Educacion_Elemento{
     width: 100%;
-
-    background: #fff;
-    background: transparent;
-    margin: 0;
-    padding: 4% 4% 4% 4%;
-
-    border-radius: 20px;
-
 }
-.Experiencia_Educacion_Elemento h1{
+.Experiencia_Educacion_Contenedor h1{
     font-family: Helvetica-Medium;
-    font-size: 4vw;
-    /* background: #339DC5;*/
+    font-size: 60px;
     margin: 0;
+    padding: 0;
 }
 .Experiencia_Educacion_Elemento h2{
     font-family: Helvetica-Medium;
-    font-size: 3vw;
-    /*background: #64a273;*/
+    font-size: 45px;
     margin: 0;
+    padding: 0;
 }
 .Experiencia_Educacion_Elemento h3{
     font-family: Helvetica-Light;
-    font-size: 2vw;
-    /*background: #339DC5;*/
+    font-size: 30px;
     margin: 0;
+    padding: 0;
 }
 .Experiencia_Educacion_Elemento h4{
     font-family: Futura-Light;
-    font-size: 2vw;
-
-    /*background: #64a273;*/
+    font-size: 30px;
     margin: 0;
+    padding: 0;
 }
 .Experiencia_Educacion_Elemento p{
     font-family: Futura-Light;
-    font-size: 20px;
-    /*background: #339DC5;*/
+    font-size: 25px;
     margin: 0;
+    padding: 0;
 }
 
 /*----------------------------------------------------------------------------------------------------*/
 /* CONTACTO */
-.contacto_seccion{
-     /*position: fixed;*/
-     width: 100vw;
-     height: 100vh;
-     background: #339DC5;
-     overflow: hidden;
-     padding: 0;
-    /*background: transparent;*/
-    display: flex;
-    align-items: center;      /* ALINEACION VERTICAL*/
-    justify-content: center;  /* ALINEACION HORIZONTAL*/
-}
 .contacto_contenedor{
     background: turquoise;
     display: flex;
@@ -675,7 +601,7 @@ nav a:hover{
     font-size: 50px;
     color: white;
 
-    min-height: 100vh;
+    min-height: 90vh;
 }
 .box{
     background: rgb(16, 235, 16);
@@ -714,7 +640,7 @@ nav a:hover{
     position: absolute;
     right: 0;
     width: 0;
-    height: 100%;
+    height: 90%;
     background: #000;
     border-left: 2px solid #fff;
 
@@ -729,4 +655,122 @@ nav a:hover{
 }
 @keyframes blink_effect {
     50% { border-color: transparent; }
+}
+
+
+.seccion_slider{
+    padding: 6vh 0 0 0;
+    width: 100vw;
+    height: 100vh;
+    background: transparent;
+    display: flex;
+    align-items: center;      /* ALINEACION VERTICAL*/
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+    background: #64a273;
+}
+.contenedor{
+    width: 90%;
+    height: 100%;
+}
+ul, li{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul.slider{
+    position: relative;
+    width: 90%;
+    height: 90%;
+}
+ul.slider li{
+    position: absolute;
+    opacity: 0;
+    width: 90%;
+    height: 100%;
+    transition: opacity 1s;
+    display: flex;
+    align-items: center;      /* ALINEACION VERTICAL*/
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+}
+ul.slider li img{
+    max-width: 90%;
+    max-height: 100%;
+    object-fit: cover;
+}
+ul.slider li:first-child{
+    opacity: 0;
+}
+ul.slider li:target{
+    opacity: 1;
+}
+
+.menu_slider{
+    text-align: center;
+    margin: 20px;
+    position: relative;
+}
+.menu_slider li{
+    display: inline-block;
+}
+.menu_slider li a{
+    text-decoration: none;
+    background: #fff;
+    color: #fff;
+    width: 50px;    
+    height: 50px;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;      /* ALINEACION VERTICAL*/
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+}
+
+@keyframes cambios{
+    0%{ margin-left: 0; }
+    20%{  margin-left: 0; }
+
+    25%{ margin-left: -100%; }
+    45%{ margin-left: -100%; }
+    
+    50%{ margin-left: -200%; }
+    70%{ margin-left: -200%; }
+    
+    75%{ margin-left: -300%; }
+    95%{ margin-left: -300%;}
+}
+
+
+.Contenedor_Cuadros{
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;      /* ALINEACION VERTICAL*/
+    justify-content: center;  /* ALINEACION HORIZONTAL*/
+
+    background: #1310d3;
+}
+.Cuadro{
+    width: 50%;
+    height: 50%;
+}
+.Cuadro:hover{
+    opacity: 60%;
+}
+.Cuadro:first-child{
+    background: #c50909;
+}
+.Cuadro:nth-child(2){
+    background: #1310d3;
+}
+.Cuadro:nth-child(3){
+    background: #f1f518;
+}
+.Cuadro:nth-child(4){
+    background: #009e22;
+}
+.Cuadro img{
+    width: 100%;
+    height: 100%;
 }
